@@ -121,7 +121,10 @@ public class W3CDom {
 
         private void copyAttributes(org.jsoup.nodes.Node source, Element el) {
             for (Attribute attribute : source.attributes()) {
-                el.setAttribute(attribute.getKey(), attribute.getValue());
+                // valid xml attribute names are: ^[a-zA-Z_:][-a-zA-Z0-9_:.]
+                String key = attribute.getKey().replaceAll("[^-a-zA-Z0-9_:.]", "");
+                if (key.matches("[a-zA-Z_:]{1}[-a-zA-Z0-9_:.]*"))
+                    el.setAttribute(key, attribute.getValue());
             }
         }
 
